# Video-Streaming-Server

./: .env  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
app/: auth.py  database.py  main.py  models.py  schemas.py
static/css/: style.css
static/js/: main.js
templates/: index.html
