[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "video_streaming_server"
version = "0.1.0"
description = "A Raspberry Pi Video Streaming Server"
requires-python = ">=3.8"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn==0.32.1",
    "python-multipart==0.0.17",
    "sqlalchemy==2.0.36",
    "psycopg2-binary==2.9.10",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-dotenv==1.0.1",
    "aiofiles==24.1.0"
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
